# voxelia

./: .gitignore  Cargo.toml
crates/voxelia-client/: Cargo.toml
crates/voxelia-client/src/: chunk.rs  graphics.rs  lib.rs  main.rs  mesh.rs  position.rs
crates/voxelia-client/src/model/: chunk.rs  cube.rs  mod.rs
crates/voxelia-client/src/structures/: graphics.rs  mesh.rs  mod.rs
crates/voxelia-client/src/systems/: chunk.rs  mod.rs  render.rs
crates/voxelia-engine/: Cargo.toml
crates/voxelia-engine/src/: block.rs  chunk.rs  collision.rs  core.rs  events.rs  lib.rs
crates/voxelia-renderer/: Cargo.toml
crates/voxelia-renderer/src/: camera.rs  desc.rs  globals.rs  instance.rs  lib.rs  main.rs  model.rs  pass.rs  pass_data.rs  pipeline.rs  position.rs  renderable.rs  renderer.rs  state.rs  texture.rs  uniform.rs  vertex.rs  window.rs
crates/voxelia-renderer/src/mesh/: mod.rs  vertex.rs
crates/voxelia-renderer/src/mesh/model/: instances.rs  mod.rs  vertex.rs
crates/voxelia-renderer/src/mesh/shapes/: cube.rs  mod.rs  pentagon.rs
crates/voxelia-renderer/src/model/: chunk.rs  cube.rs
crates/voxelia-renderer/src/pass/: phong.rs
crates/voxelia-renderer/src/shaders/: shader.wgsl
