[package]
name = "voxelia-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

voxelia-renderer = { path = "../voxelia-renderer" }
voxelia-engine = { path = "../voxelia-engine" }

specs = { version = "0.20.0", features = ["specs-derive"] }
env_logger = "0.10.0"

tokio = { version = "1.29.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "time",
] }