[package]
name = "voxelia-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.29.0", features = ["macros", "rt", "rt-multi-thread", "net"]}
bytemuck = { version = "1.13.1", features = [ "derive" ] }

env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.16.1"
winit = "0.28.6"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]
